--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 a.out
 demo.txt*
 main
-.vscode/ipch
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
