remove dir class init and moving files to src

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
     "program": "${workspaceFolder}/a.out",
     "args": [],
     "stopAtEntry": false,
-    "cwd": "${workspaceFolder}",
+    "cwd": "${workspaceFolder}/src",
     "environment": [],
     "externalConsole": true,
     "MIMode": "gdb",
