--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
     {
       "label": "build",
       "type": "shell",
-      "command": "g++ -g main.cpp -o a.out",
+      "command": "g++ -g ${workspaceFolder}/src/main.cpp -o a.out",
       "group": {
         "kind": "test",
         "isDefault": true
